--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
                     <p>Canova's assistants roughly blocked out the marble, leaving Canova to perform the final carving and shape the stone to highlight the Graces soft flesh. This was a trademark of the artist, and the piece shows a strong allegiance to the Neo-Classical movement in sculpture, of which Canova is the prime exponent.<br><br> The three goddesses are shown nude, huddled together, their heads almost touching in what many have referred to as an erotically charged piece. They stand, leaning slightly inward — perhaps discussing a common issue, or simply enjoying their closeness. Their hair-styles are similar, braided atop their heads.</p>
                 </div>
                 <div id="canvas-container" class="fixed"></div> 
-                <h4 class="footer">Created by Anderson Mancini based on <a href="https://dribbble.com/shots/6767548-The-Three-Graces-Concept" target="_blank">Tom Bogner Design</a>. <a href="https://sketchfab.com/3d-models/3d-printable-the-three-graces-58e0ae19e2984b86883edc41bf43415a" target="_blank">Free model credits</a></h4>
+                <h2 class="footer">Created by Hasnain Babar</h2>
             </div>
     </body>
 </html>
